--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.93MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.8KB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,50 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-4.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
