--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 台湾-675.1KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
-  - {name: 🇨🇳 中国-4.93MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-811.8KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
+  - {name: 🇹🇭 泰国-2.36MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 捷克-4.90MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
   - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
   - {name: 🇨🇳 中国-493.5KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-675.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.36MB/s(Youtube:不良林)
+      - 捷克-4.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-493.5KB/s(Youtube:不良林)
